--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@
 }
 
 body {
-  font-family: "inter", sans-serif;
+  font-family: "Geist", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
